--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	
   <li><a href="" >Аниме Покемоны</a></li>
 	
-<li><a href="">Поколения Pokemon</a></li> 
+<li><a href="https://klimlimanski.github.io/PokemonPokl/">Поколения Pokemon</a></li> 
 	
   <li><a href="">Игры Pokemon</a></li>
 	
