--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	
 <li><a href="https://klimlimanski.github.io/PokemonPokl/">Поколения Pokemon</a></li> 
 	
-  <li><a href="">Игры Pokemon</a></li>
+  <li><a href="https://klimlimanski.github.io/pokemonGames/">Игры Pokemon</a></li>
 	
 </ul>
 
