--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <ul class="menu-main">
   <li><a href="" class="current">Главная</a></li>
 	
-  <li><a href="" >Аниме Покемоны</a></li>
+  <li><a href="https://klimlimanski.github.io/PokemonAn/" >Аниме Покемоны</a></li>
 	
 <li><a href="https://klimlimanski.github.io/PokemonPokl/">Поколения Pokemon</a></li> 
 	
